# HellCore

./: .gitignore  MOOCodeSequences.txt  Makefile  Makefile.am  README  README.md  autogen.sh  bf_register.h  build.sh  code_gen.c  configure.ac  cvsstat  db.h  db_io.c  decompile.h  default.nix  disassemble.h  eval_env.h  eval_vm.c  eval_vm.h  exceptions.h  execute.c  execute.h  flake.nix  functions.h  getpagesize.h  gperf  hash.c  hash.h  list.c  list.h  malloc.c  match.c  match.h  md5.c  md5.h  moo  my-fcntl.h  my-inet.h  my-math.h  (+32 more)
patches/: unicode-moo-4.diff  utf8-u4g2.patch
src/: .gitignore  ChangeLog.txt  Makefile  Makefile.am  Makefile.in  Makefile.in.bak  ast.c  ast.h  bf_register.h  client_bsd.c  client_sysv.c  code_gen.c  code_gen.h  config.h  config.h.in  config.status  configure  configure.in  db_file.c  db_io.c  db_io.h  db_objects.c  db_private.h  db_properties.c  db_verbs.c  decompile.c  disassemble.c  eval_env.c  exceptions.c  execute.c  execute.h  extensions.c  files.c  functions.c  gnu-malloc.c  hash_lookup.c  hash_lookup.h  keywords.c  keywords.gperf  keywords.h  (+82 more)
